--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "write",
+  "name": "wagmi-final",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.1",
+    "buffer": "^6.0.3",
     "ethers": "^5.7.2",
-    "moralis": "^2.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "wagmi": "^0.9.4",
+    "use-debounce": "^9.0.3",
+    "wagmi": "^0.12.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
